--- a/juego.ui
+++ b/juego.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>518</width>
-    <height>591</height>
+    <width>1022</width>
+    <height>650</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,18 +16,12 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QFrame" name="marco">
+     <widget class="QGraphicsView" name="lienzo">
       <property name="minimumSize">
        <size>
         <width>500</width>
         <height>400</height>
        </size>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
       </property>
      </widget>
     </item>
@@ -56,6 +50,13 @@
        <item>
         <widget class="QWidget" name="widget_2" native="true">
          <layout class="QGridLayout" name="gridLayout">
+          <item row="1" column="1">
+           <widget class="QPushButton" name="btnArriba">
+            <property name="text">
+             <string>Arriba</string>
+            </property>
+           </widget>
+          </item>
           <item row="3" column="1">
            <widget class="QPushButton" name="btnAbajo">
             <property name="text">
@@ -74,13 +75,6 @@
            <widget class="QPushButton" name="btnDerecha">
             <property name="text">
              <string>Derecha</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QPushButton" name="btnArriba">
-            <property name="text">
-             <string>Arriba</string>
             </property>
            </widget>
           </item>
@@ -110,8 +104,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>518</width>
-     <height>22</height>
+     <width>1022</width>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuArchivo">
